denier mis en jour

--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ title: "Elie ndako"
 baseline: "Développeur Etudiant passionné"
 description: "Développeur passionnée par la technologie, les projets innovants et le partage de connaissances."
 params:
-  author: "GraceVayisiririaBlog"
+  author: "elie Blog"
   github: "https://github.com/elie ndako"
   email: "elie@example.com"
   social:
